# solid-sold

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/user/: exceptions.py  models.py  services.py  storage.py
examples/user/sqlite/: __main__.py  context.py  storage.py
solid_sold/: base.py  context.py
